@@ -26,6 +26,7 @@ dead_channels  =            # If not empty or specified in the probe, a dictiona
 cut_off        = 300, auto  # Min and Max (auto=nyquist) cut off frequencies for the band pass butterworth filter [Hz]
 filter         = True       # If True, then a low-pass filtering is performed
 remove_median  = False      # If True, median over all channels is substracted to each channels (movement artifacts)
+common_ground  =            # If you want to use a particular channel as a reference ground: should be a channel number
 
 [triggers]
 trig_file      =            # External stimuli to be considered as putative artefacts [in trig units] (see documentation)
@@ -110,3 +111,4 @@ noise_thr      = 0.8        # Minimal amplitudes are such than amp*min(templates
 filter_done    = False      # Will become True automatically after filtering
 artefacts_done = False      # Will become True automatically after removing artefacts
 median_done    = False      # Will become True automatically after removing common median
+ground_done    = False      # Will become True automatically after removing common ground
