@@ -4,6 +4,7 @@ Release 0.7.5
 
 * fix a bug for MPICH when large dictionaries. Not fully solved for very large ones
 * fix a bug for numpy files when used with new numpy versions
+* add the possibility to subtract one channel as a reference channel from others
 
 =============
 Release 0.7.4
